# ifupdown-to-systemd-networkd

./: .gitignore  README.md  convert.py  pyproject.toml  test_convert.py
examples/: convert.sh
examples/bonding/: bond0.netdev  bond0.network  eno1.network  eno2.network  eth0.network  interfaces
examples/dhcp/: eth0.network  interfaces  tables.conf
examples/dhcp46/: eth0.network  interfaces
examples/dhcp6/: eth0.network
examples/issue1/: ens3.network  interfaces
examples/post-up/: eth0.network  interfaces  rt_tables  tables.conf
examples/simple/: eth0.network  interfaces
examples/static/: eth0.network  interfaces
examples/static-v6/: eth0.network  eth1.network  interfaces
examples/vlan/: eth0.123.netdev  eth0.123.network  eth0.network  interfaces
migrate_to_systemd_networkd/: convert.py  ifupdown.py  utils.py
tests/: test_convert.py
